Some wrapping fixes
Fixed the banner image going below the seperator, also somewhat fixed the interactions between the map and body text with changing screen sizes, needs more work.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,13 +3,12 @@ ul{
     margin: 0;
     padding:0;
     padding-top: 10px;
-    width:auto;
-    height: auto;
-    max-width:200px;
+    width:100%;
     min-width:100px;
 }
 
 .nav{
+    width:100%;
     font-family:"Roboto", serif;
     border-left: 15px solid #555555;
     background-color: #aaaaaa;
@@ -18,8 +17,8 @@ ul{
     padding:13%;
     text-decoration: none;
     text-align:left;
-    height:75px;
     margin-bottom:10px;
+    max-height:75px;
 }
 
 .hovering:hover{
@@ -30,10 +29,10 @@ ul{
 .banner{
     overflow:hidden;
     width:80vw;
-    max-height:265px;
-    position:absolute;
+    max-height:350px;
+    position:relative;
     padding: 10px;
-    margin-left:-1.5vw;
+    margin-left:2vw;
 }
 
 li.selected{
@@ -42,4 +41,9 @@ li.selected{
 
 hr{
     border-width: 10px;
+}
+
+.map{
+    border: 1px solid black;
+    overflow:auto;
 }
